--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "buffer": "^6.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5",
     "util": "^0.12.5"
   }
