--- a/package.json
+++ b/package.json
@@ -14,15 +14,27 @@
   "dependencies": {
     "@coinbase/onchainkit": "latest",
     "@neondatabase/serverless": "^1.0.2",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@tanstack/react-query": "^5.81.5",
     "@types/pg": "^8.15.5",
+    "@vercel/analytics": "^1.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "drizzle-kit": "^0.31.5",
     "drizzle-orm": "^0.44.6",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "geist": "^1.5.1",
+    "lucide-react": "^0.546.0",
     "next": "15.3.4",
     "pg": "^8.16.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.4.0",
     "viem": "^2.31.6",
     "wagmi": "^2.16.3"
   },
